made sure buttons aligned correctly and added empty searchbar component

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,5 @@ body{
 
 .Cards{
   display: grid;
-  grid-auto-flow: column;
-  grid-template-columns: 1fr, 1fr, 1fr;
-  justify-content: center;
+  grid-template-columns: repeat(4, 1fr);
 }
